# perk-pushplus-python-sdk

./: .gitignore  README.md  pyproject.toml
examples/: quick_start.py
src/perk_pushplus/: __init__.py  access_key.py  callback_parser.py  client.py  config.py  enums.py  exceptions.py  http.py  rate_limit.py
src/perk_pushplus/api/: __init__.py  access_key.py  base.py  channel.py  clawbot.py  friend.py  image.py  message.py  message_token.py  open_message.py  pre.py  setting.py  topic.py  topic_user.py  user.py  webhook.py
src/perk_pushplus/models/: __init__.py  base.py  callback.py  open_access.py  open_channel.py  open_clawbot.py  open_friend.py  open_image.py  open_message.py  open_pre.py  open_setting.py  open_token.py  open_topic.py  open_user.py  open_webhook.py  send.py
tests/: conftest.py  test_enums_and_exceptions.py  test_image_api.py  test_message_api.py  test_models.py  test_open_api.py
