[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perk-pushplus-sdk"
version = "1.0.1"
description = "pushplus(推送加) 官方接口的 Python SDK，覆盖消息发送接口与全部开放接口。"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "perk-net" },
]
keywords = ["pushplus", "wechat", "notify", "sdk", "webhook"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://www.pushplus.plus"
Documentation = "https://www.pushplus.plus/doc/guide/api.html"
Source = "https://github.com/pushplus/perk-pushplus-python-sdk"
Issues = "https://github.com/pushplus/perk-pushplus-python-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
perk_pushplus = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
